2008-11-11  Juanma Barranquero  <lekktu@gmail.com>

	* quail/hangul.el (hangul-djamo): Fix typo in docstring.

2008-11-07  Vasily Korytov  <vasily@korytov.pp.ru>  (tiny change)

	* quail/cyrillic.el: Handle backslash key (bug#839).

2008-10-20  Kenichi Handa  <handa@m17n.org>

	* quail/indian.el (inscript-mlm-keytable): New variable.
	(malayalam-inscript): Use inscript-mlm-keytable.

2008-09-11  Magnus Henoch  <mange@freemail.hu>

	* quail/cyrillic.el ("cyrillic-translit"): Add g' for Ukrainian G
	with upturn.

2008-09-02  Carsten Bormann  <cabo@tzi.org>

	* quail/latin-post.el ("german-postfix"): Do not translate ue to
	\"u after a, e or q, because that would be extremely uncommon
	compared to aue, eue or que.  The only exception is the prefix
	"ge", after which, according to corpus statistics, a \"u can be
	expected.

2008-08-10  Jihyun Cho  <jihyun.jo@gmail.com>

	* quail/hangul.el (hangul3-input-method-jong): Fix array indexing bug.

2008-07-19  Juri Linkov  <juri@jurta.org>

	* quail/cyrillic.el ("cyrillic-translit"): Add two rules "//'" and
	"//`" for combining accents as a separate character.  Keep two
	rules "i`" and "I`" for characters where accent is not a separate
	character.  Revert changes that added postfix combining accents.

2008-07-17  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* Makefile.in (install): Perform post-install cleanup inside NS app
	bundle.

2008-07-12  Juri Linkov  <juri@jurta.org>

	* quail/rfc1345.el: Replace non-printable control characters with
	equivalent text-only notations.

	* quail/cyrillic.el ("cyrillic-translit"): Fix rules with
	combining acute accent.  Add rules ("e\\" ?э) ("E\\" ?Э).
	Change conflicting rules ("u'" ?ў) to ("u~" ?ў), and ("U'" ?Ў)
	to ("U~" ?Ў).  Doc fix.  Put combining accent rules into one group.

2008-07-10  Teodor Zlatanov  <tzz@lifelogs.com>

	* quail/cyrillic.el : Add more rules to cyrillic-translit, make
	everything postfix.  Adjust to eliminate conflicts.
